[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Griffy-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Zombie_Holocaust.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Menu_CharacterButton.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 2 )

[node name="Menu_CharacterButton" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -210.0
margin_bottom = -625.0
rect_min_size = Vector2( 0, 95 )
alignment = 1
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 10.0
margin_right = 1060.0
margin_bottom = 95.0
alignment = 1

[node name="ColorBackground" type="ColorRect" parent="VBoxContainer"]
margin_top = 17.0
margin_right = 1050.0
margin_bottom = 77.0
rect_min_size = Vector2( 1050, 60 )
color = Color( 0.117647, 0.0901961, 0.00784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CharacterName" type="Label" parent="VBoxContainer/ColorBackground"]
margin_left = 22.0
margin_top = 11.0
margin_right = 252.0
margin_bottom = 52.0
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MysterySolved" type="Label" parent="VBoxContainer/ColorBackground"]
margin_left = 262.0
margin_top = 13.0
margin_right = 564.0
margin_bottom = 54.0
rect_pivot_offset = Vector2( 302, 433 )
custom_fonts/font = SubResource( 1 )
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayRandom" type="Button" parent="VBoxContainer/ColorBackground"]
margin_left = 568.0
margin_top = 9.0
margin_right = 708.0
margin_bottom = 50.0
custom_colors/font_color_hover = Color( 0.627451, 0.945098, 0.360784, 1 )
custom_colors/font_color_pressed = Color( 0.101961, 0.403922, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Play Random"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ColorBackground/PlayRandom" to="." method="_on_PlayRandom_pressed"]
